Harmonize and simplify patterns